--- a/public/stylesheets/components/hero.css
+++ b/public/stylesheets/components/hero.css
@@ -6,7 +6,7 @@
 
 .hero-title {margin:0 0 1rem 0;font-size:2.5rem;}
 .hero-description {}
-.hero-cta {display:flex;align-items:center;justify-content:center;width:260px;height:56px;margin:3rem 0 0;border-radius:50px;text-align:center;background:var(--yellow);color:var(--gray0);font-weight:800;}
+.hero-cta {display:flex;align-items:center;justify-content:center;width:260px;height:56px;margin:3rem 0 0;border-radius:50px;text-align:center;background:var(--yellow);color:var(--gray0);font-size:18px;font-weight:800;}
 
 .hero-object-group {height:100%;position:absolute;right:-4rem;top:-8rem;}
 .hero-object-group-inner {position:relative;}
@@ -19,6 +19,19 @@
 .is-observed .hero-cta {animation:fadeup var(--animation-duration) 1s both;position:relative;z-index:5;}
 
 
+.cta-arrow {
+    width: 9px;
+    margin:0 0 0 .75rem;
+}
+  
+  
+/* todo safe area */
+.home-cta {display:flex;justify-content:center;padding:0 5%;position:fixed;left:0;right:0;bottom:calc(constant(safe-area-inset-bottom) + 2rem);bottom:calc(env(safe-area-inset-bottom) + 2rem);z-index:9;transform:translateY(100px);transition:all .6s;opacity:0;}
+.home-cta-button {
+display:flex;align-items:center;justify-content:center;width:100%;max-width:450px;height:56px;margin:3rem 0 0;
+border-radius:50px;text-align:center;background:var(--yellow);font-size:18px;color:var(--gray0);font-weight:800;}
+.home-cta.is-fixed {transform:translateY(0);opacity:1;}
+
 @media (max-width:1200px) {
 
     .hero-inner {padding-top:4rem;padding-bottom:4rem;}
@@ -26,4 +39,7 @@
     .hero-object-group {position:static;right:auto;top:auto;}
     .hero-object2 {width:120%;margin-left:-12%;}
     .hero-object3 {right:-1rem;bottom:-15rem;}
+
+    .hero-cta {width:220px;}
+    .cta-arrow {width:11px;}
 }
