--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -358,9 +358,10 @@ button {
 
 
 @media (max-width:680px) {
-  .home-tablist-inner {justify-content:left;overflow:auto;white-space:nowrap;margin-right:1.5rem;}
+  .home-tablist {}
+  .home-tablist-inner {justify-content:left;overflow:auto;white-space:nowrap;}
   .home-tablist-inner::-webkit-scrollbar {display:none;}
-  .home-tablist-tab {width:auto;margin:0 1.5rem;font-size:16px;}
+  .home-tablist-tab {width:auto;padding-left:1rem;padding-right:1rem;font-size:16px;}
   .home-tablist-tab small {display:none;}
 
   .home-tablist-backdrop {height: 56px;}
