--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -288,7 +288,7 @@ button {
 .tabpanel2-2-wrap .tag2 {width:100%;max-width:98px;position:absolute;left:65px;bottom:80px;}
 .tabpanel2-2-wrap .users {width:100%;max-width:580px;margin:0 auto;display:flex;flex-wrap:wrap;justify-content:space-between;}
 .tabpanel2-2-wrap .users > div {width:185px;margin:0 0 14px 0;position:relative;}
-.tabpanel2-2-wrap .users > div .donut-wrap {width:76px;position:absolute;top:25%;left:5%;z-index:1;}
+.tabpanel2-2-wrap .users > div .donut-wrap {width:41.08108108108%;position:absolute;top:25%;left:5%;z-index:1;}
 .tabpanel2-2-wrap .users > div img {display:block;box-shadow:var(--shadow400);}
 .tabpanel2-2-wrap .users > div.user1 {}
 .tabpanel2-2-wrap .users > div.user1 {}
@@ -303,7 +303,6 @@ button {
 .view-only-desktop {display:block;}
 .view-only-moblie {display:none;}
 
-/* @media (max-width:1200px) { */
 @media (max-width:1024px) {
   html {font-size:12px;}
   .navbar {padding: 0 var(--grid-margin);}
@@ -351,9 +350,11 @@ button {
   .is-observed .tabpanel4-1-1 {max-width:42.66666666667%;box-shadow:var(--shadow400);}
   .is-observed .tabpanel4-1-2 {max-width:32.26666666667%;right:20%;top:17%;}
   .is-observed .tabpanel4-1-3 {max-width:66.66666666667%;right:5px;bottom:-10px;z-index:4;}
-}
 
-@media (max-width:1024px) {
+  
+  .js-counter {
+    font-size: 2.5rem;
+  }
 }
 
 
@@ -368,19 +369,22 @@ button {
 
   .tabpanel1-2-wrap-inner {width:320px;}
   .tabpanel1-4-wrap-inbox {height:400px;}
+
+  
 }
 
 
 
 
 .donut-ring {stroke: #EBEBEB;}
-.donut-segment {stroke-linecap:round;transform-origin:center;animation-delay:1.2s}
+.donut-segment {stroke-linecap:round;transform-origin:center;animation-delay:1.2s !important;}
 .donut-text {}
 .donut-data {font-size: 0.25em;text-anchor: middle;fill: var(--gray600);}
 .donut-percent {font-size: 0.5em;fill: var(--gray700);font-weight:600;}
 
 /*  todo */
 .js-counter {
+  font-weight: var(--font-weight-bold);
   position: absolute;
   left: 30%;
   top: 36%;
