--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -88,8 +88,8 @@ button {
 .align-centered .home-tabpanel-section-inner {padding:7.5rem 0;text-align:center;}
 .align-centered .home-tabpanel-section-media {margin:3rem auto 0;}
 .align-half .home-tabpanel-section-inner {display:flex;flex-wrap:wrap;align-items:center;}
-.align-half .home-tabpanel-section-title {padding-left:55%;}
-.align-half .home-tabpanel-section-description {padding-left:55%;}
+.align-half .home-tabpanel-section-title {padding-left:57%;}
+.align-half .home-tabpanel-section-description {padding-left:57%;}
 
 .home-tabpanel-section.background .home-tabpanel-section-title {color:var(--gray0);}
 .home-tabpanel-section.background .home-tabpanel-section-description {color:var(--gray500);}
@@ -104,8 +104,8 @@ button {
 .is-observed .home-tabpanel-section-media {animation:fadeup var(--animation-duration) 1s forwards;}
 
 .tabpanel1-1-wrap {
-  padding-top: 57%;
-  max-width: 800px;
+  padding-top: 62%;
+  max-width: 874px;
   overflow: hidden;
 }
 .tabpanel1-1-wrap video {    position: absolute;
@@ -119,8 +119,8 @@ button {
   
 
   .tabpanel2-4-wrap {
-    padding-top: 82%;
-    max-width: 800px;
+    padding-top: 52%;
+    max-width: 758px;
     overflow: hidden;
   }
   .tabpanel2-4-wrap video {
@@ -163,7 +163,7 @@ button {
 .is-observed .tabpanel1-3-background img:nth-of-type(7) {animation-duration:34s;}
 .is-observed .tabpanel1-3-background img:nth-of-type(8) {animation-duration:26s;}
 
-.tabpanel1-4-wrap {width:100%;max-width:582px;overflow:hidden;position:absolute;}
+.tabpanel1-4-wrap {width:100%;max-width:511px;overflow:hidden;position:absolute;}
 .tabpanel1-4-wrap-inbox {height:594px;position:relative;}
 .tabpanel1-4-wrap .viewer {position: absolute;}
 
@@ -220,18 +220,19 @@ button {
   width: 136%;
 }
 
-.tabpanel2-1-wrap {position:absolute;animation:none !important;opacity:1;}
+.tabpanel2-1-wrap {width:46.58333333333%;position:absolute;animation:none !important;opacity:1;}
 .tabpanel2-1-1 {max-width:530px;position:absolute;left:10px;top:10px;transition:all var(--animation-duration);transform:scale(.5);opacity:0;}
-.tabpanel2-1-2 {max-width:550px;transition:all var(--animation-duration);transform:scale(.2);opacity:0;}
+.tabpanel2-1-2 {max-width:559px;transition:all var(--animation-duration);transform:scale(.2);opacity:0;}
 .is-observed .tabpanel2-1-1 {opacity:1;transform:scale(1);transition-delay:1s;}
 .is-observed .tabpanel2-1-2 {opacity:1;transform:scale(1);transition-delay:1.3s;}
 
+.tabpanel2-2-wrap {width:51.75%;}
 .tabpanel2-2-1 {max-width:560px;position:absolute;}
 
 .tabpanel2-3-wrap {max-width:786px;}
 /* .tabpanel2-4-wrap {max-width:758px;} */
 
-.tabpanel2-5-wrap {position:absolute;animation:none !important;opacity:1;}
+.tabpanel2-5-wrap {width:44.41666666667%;position:absolute;animation:none !important;opacity:1;}
 .tabpanel2-5-1 {max-width:75.42213883677%;box-shadow:var(--shadow400);position:absolute;left:10.8818011257%;top:14.57489878543%;z-index:1;opacity:0;}
 .tabpanel2-5-2 {max-width:533px;opacity:0;}
 .is-observed .tabpanel2-5-1 {animation:fadeup var(--animation-duration) 1s forwards;}
@@ -247,10 +248,10 @@ button {
 .is-observed .tabpanel3-2-2 {animation:fadeleft var(--animation-duration) 1.4s both;}
 
 
-.tabpanel3-3-wrap {max-width:612px;position:absolute;}
+.tabpanel3-3-wrap {width:51%;max-width:612px;position:absolute;}
 
-.tabpanel3-4-wrap {margin:6rem 0 0;position:absolute;animation:none !important;opacity:1;}
-.tabpanel3-4-1 {max-width:582px;opacity:0;}
+.tabpanel3-4-wrap {max-width:582px;margin:6rem 0 0;position:absolute;animation:none !important;opacity:1;}
+.tabpanel3-4-1 {opacity:0;}
 .tabpanel3-4-2 {max-width:17.86941580756%;position:absolute;right:22%;top:0;z-index:1;opacity:0;box-shadow:var(--shadow400);}
 .tabpanel3-4-3 {max-width:27.14776632302%;position:absolute;right:0;top:24%;opacity:0;} 
 /*  */
@@ -259,7 +260,7 @@ button {
 .is-observed .tabpanel3-4-3 {animation:fadeup var(--animation-duration) 1.4s both;}
 
 /* todo size  % */
-.tabpanel4-1-wrap {width:100%;max-width:612px;position:absolute;animation:none;}
+.tabpanel4-1-wrap {width:51%;max-width:612px;position:absolute;animation:none;}
 .is-observed .tabpanel4-1-1 {max-width:271px;box-shadow:var(--shadow400);position:relative;left:0;top:0;z-index:2;}
 .is-observed .tabpanel4-1-2 {max-width:311px;position:absolute;right:12%;top:140px;z-index:3;animation:fadeup var(--animation-duration) 1.4s both;}
 .is-observed .tabpanel4-1-3 {max-width:377px;box-shadow:var(--shadow400);position:absolute;right:5px;bottom:26px;z-index:1;animation:fadeup var(--animation-duration) 1.8s both;}
@@ -268,11 +269,10 @@ button {
 .tabpanel4-2-wrap {display:flex;justify-content:center;max-width:743px;margin:4rem auto -24rem;transform:translateY(20rem);transition:transform .8s 1s;}
 /* 그냥 똑같이 올라오면 되는 듯 */
 .tabpanel4-2-wrap * {animation:none;}
-.tabpanel4-2-1 {width:30%;max-width:585px;}
-.tabpanel4-2-2 {width:30%;max-width:585px;}
+.tabpanel4-2-wrap img {filter:drop-shadow(var(--shadow400));}
 .is-observed .tabpanel4-2-wrap {transform:translateY(3rem);}
 
-.tabpanel4-3-wrap {max-width:612px;position:absolute;}
+.tabpanel4-3-wrap {width:50.91666666667%;max-width:612px;position:absolute;}
 .tabpanel4-3-1 {filter: drop-shadow(var(--shadow400));}
 
 .tabpanel4-4-wrap {}
@@ -313,6 +313,8 @@ button {
 
   .view-only-desktop {display:none;}
   .view-only-moblie {display:block;}
+
+  .home-tabpanel-section-media {width:100% !important;}
 
   .align-half .home-tabpanel-section-inner {justify-content:center;text-align:center;}
   .align-half .home-tabpanel-section-title {width:100%;padding-left:0;}
@@ -358,6 +360,9 @@ button {
 }
 
 
+@media (max-width:720px) {
+}
+
 @media (max-width:680px) {
   .home-tablist {}
   .home-tablist-inner {display:block;overflow:auto;white-space:nowrap;padding:0 1rem;}
@@ -369,6 +374,11 @@ button {
 
   .tabpanel1-2-wrap-inner {width:320px;}
   .tabpanel1-4-wrap-inbox {height:400px;}
+
+  
+  .js-counter {
+    font-size: 1em;
+  }
 
   
 }
