--- a/public/stylesheets/abstracts/keyframes.css
+++ b/public/stylesheets/abstracts/keyframes.css
@@ -29,6 +29,20 @@
 	100% {transform: translateY(0px);}
 }
 
+@keyframes hero-object2 {
+	0% {transform: translateY(0);}
+	25% {transform: translateY(-30px);}
+	50% {transform: translateY(-10px);}
+	75% {transform: translateY(-20px);}
+	100% {transform: translateY(0px);}
+}
+
+@keyframes apply-coin {
+	0% {transform: translateY(0);}
+	50% {transform: translateY(20px);}
+	100% {transform: translateY(0px);}
+}
+
 
 @keyframes test {
 	0% {transform: translateY(0px);}
