--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -352,7 +352,7 @@ button {
   .is-observed .tabpanel4-1-3 {max-width:66.66666666667%;right:5px;bottom:-10px;z-index:4;}
 
   
-  .js-counter {
+  .counter {
     font-size: 2.5rem;
   }
 }
@@ -374,7 +374,7 @@ button {
   .tabpanel1-4-wrap-inbox {height:400px;}
 
   
-  .js-counter {
+  .counter {
     font-size: 1em;
   }
 
@@ -391,7 +391,7 @@ button {
 .donut-percent {font-size: 0.5em;fill: var(--gray700);font-weight:600;}
 
 /*  todo */
-.js-counter {
+.counter {
   font-weight: var(--font-weight-bold);
   position: absolute;
   left: 30%;
