--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -396,6 +396,8 @@ button {
 
   .home-tablist-backdrop {height: 66px;}
   .tabpanel2-5-wrap {max-width:80%;}
+  .tabpanel2-5-1 {max-width:78%;}
+
 
   /* todo */
   .footer {padding-bottom:10rem;font-size:14px;}
